# api/swagger/swagger.yaml
@@ -94,6 +94,32 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /auth/facebook:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: socialAuthController
+    post:
+      description: Enable Login using facebook
+      # used as the method name of the controller
+      operationId: facebookLogin
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: tokenBlob
+          description: The access token.
+          schema:
+            $ref: "#/definitions/SocialSigninRequest"  
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/SocialSigninResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -142,4 +168,12 @@ definitions:
       email:
         type: string
       id:
+        type: string
+  SocialSigninRequest:
+    properties:
+      tokenBlob:
+        type: object
+  SocialSigninResponse:
+    properties:
+      token:
         type: string
